--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <title>Main Menu</title>
+     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
   </head>
-  <body>
-    <div id="app"></div>
+  <body bgcolor="#E6E6FA">
+  <div id="app"></div>
+  
+
+
+  <script>window.$ = window.jQuery = require('jquery'); //!!!! This makes jquery work with electron !!!!</script>
+  <script src="http://hammerjs.github.io/dist/hammer.min.js" charset="utf-8"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
   <script src="logic.js" charset="utf-8"></script>
+
+
   <script>
     // You can also require other files to run in this process
     require('./renderer-bundle.js')
