--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>Main Menu</title>
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+    <link rel="stylesheet" href="./app/styles/main-menu.css">
   </head>
-  <body bgcolor="#E6E6FA">
+  <body>
   <div id="app"></div>
-  
+
 
 
   <script>window.$ = window.jQuery = require('jquery'); //!!!! This makes jquery work with electron !!!!</script>
