--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <title>Main Menu</title>
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+    <!-- <link rel="stylesheet" href="./node_modules/materialize.min.css"> -->
     <link rel="stylesheet" href="./app/styles/main-menu.css">
   </head>
   <body>
   <div id="app"></div>
 
-
-
   <script>window.$ = window.jQuery = require('jquery'); //!!!! This makes jquery work with electron !!!!</script>
-  <script src="http://hammerjs.github.io/dist/hammer.min.js" charset="utf-8"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+  <script src="./node_modules/hammerjs/hammer.min.js" charset="utf-8"></script>
+  <script src="./node_modules/materialize.min.js"></script>
   <script src="logic.js" charset="utf-8"></script>
 
 
